@@ -5,6 +5,7 @@ Changes
 ---------
 - Convert 'long' in schemas to 'int' (#101).
 - Carefully map Python schema to the possibly munged internal schema (#105).
+- Allow writing of features with geometry: None (#71).
 
 1.1.3 (2014-03-23)
 ------------------
